# unslop

./: .gitignore  AGENTS.md  ARCHITECTURE.md  DOCUMENTATION.md  README.md  pyproject.toml
design/: 001_BASIC_CONCEPT.md  002_CONTAINER_RESOLUTION.md  003_VOCABULARY_PIPELINE.md  004_DEFINITION_SOURCE_SCORING.md
griffonner/pages/unslop/: cli.md  index.md  keyfile.md  models.md  producer.md  roots.md  vocabulary.md
griffonner/unslop/: class.md.jinja2  index.md.jinja2  macros.jinja2
src/unslop/: __init__.py  __main__.py  cli.py  keyfile.py  producer.py  roots.py  vocabulary.py
tests/: test_cli.py  test_producer.py  test_roots.py  test_vocabulary.py
